[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/NormalMapEditor/normalDraw.gd" type="Script" id=1]
[ext_resource path="res://addons/NormalMapEditor/template.gd" type="Script" id=2]

[node name="template" type="Control"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="draw" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
arrow_len = 8.0

[node name="whiteRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.215686 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Delete", null, 0, false, false, 0, 0, null, "", false ]
[connection signal="mouse_entered" from="." to="." method="_on_self_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_self_mouse_exited"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
